add new articele

--- a/1index.html/1index.html
+++ b/1index.html/1index.html
@@ -68,29 +68,6 @@
         </ul>
     </nav>
     <main>
-        <article class="article" id="Dzisiaj">
-            <h2 class="article__header">Dzisiaj</h2>
-            <p class="article_paragraph">Nazywam się Przemysław Skowroński mam 67 lat, jestem emerytem wojskowym,
-                szczęśliwym w małżeństwie,
-                dumnym z córki i z zadowoleniem przyglądam się jak dorasta mój sześcioletni wnuk. Dbam o kondycję
-                fizyczną
-                <span class="article__highlightedText">(pływam, biegam, ćwiczę ciężarkami),</span>(pływam, biegam, ćwiczę ciężarkami),</span> lubię podróże,
-                podtrzymuję
-                znajomość
-                języka rosyjskiego i doskonale język angielski. W wolnych chwilach
-                rysuję i maluję. Ogólnie cieszę się życiem.
-            </p>
-        </article>
-        <article class="article" id="Noey artykół">
-            <h2 class="article__header">Testowy nagłówek</h2>
-            <p class="article_paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque excepturi reprehenderit odio officia quo libero nesciunt voluptate dolorem quas, blanditiis omnis laudantium sunt nihil exercitationem deleniti maxime culpa aut eligendi.
-                <span class="article__highlightedText">(pływam, biegam, ćwiczę ciężarkami),</span>(pływam, biegam, ćwiczę ciężarkami),</span> lubię podróże,
-                podtrzymuję
-                znajomość
-                języka rosyjskiego i doskonale język angielski. W wolnych chwilach
-                rysuję i maluję. Ogólnie cieszę się życiem.
-            </p>
-        </article>
         <article class="article" id="Wczoraj">
             <h2 class="article__header">Wczoraj</h2>
             <p class="article_paragraph">Urodziłem się w Poznaniu, ale służba wojskowa poprzez Piłę, Inowrocław,
@@ -116,6 +93,11 @@
                     *Szefostwo Transportu i Ruch Wojsk (otwiera się w nowej karcie)</a>
             </p>
         </article>
+        <article class="article" id="Nowy artykół">
+            <h2 class="article__header">Testowy nagłówek</h2>
+            <p> Lorem ipsum </p>
+        </article>
+
         <article class="article" id="Jutro">
             <h2 class="article__header">Jutro</h2>
             <p class="article_paragraph">Wstępując do YouCodu liczę na zdobycie nowych umiejętności w tworzenia stron
